--- a/.github/workflows/buildapp.yml
+++ b/.github/workflows/buildapp.yml
@@ -119,9 +119,9 @@ jobs:
         id: prepare_youtube
         run: |
           wget "$YOUTUBE_URL" --no-verbose -O main/YouTube.zip
-          cd ${{ github.workspace }}/main
-          mv YouTube.ipa YouTube.zip
           unzip -q YouTube.zip
+          # mv YouTube.ipa YouTube.zip
+          cd ${{ github.workspace }}/main
           youtube_version=$(defaults read "$(pwd)/Payload/YouTube.app/Info" CFBundleVersion)
           echo "==> YouTube v$youtube_version downloaded!"
           sed -i '' "17s#.*#YOUTUBE_VERSION = ${youtube_version}#g" Makefile
