--- a/.github/workflows/buildapp.yml
+++ b/.github/workflows/buildapp.yml
@@ -4,6 +4,9 @@
 # Original idea by @ISnackable. Thanks to him for handling the hardest parts!
 # https://github.com/ISnackable/CercubePlus/blob/main/.github/workflows/Build.yml
 
+# Original idea by @ISnackable. Thanks to him for handling the hardest parts!
+# https://github.com/ISnackable/CercubePlus/blob/main/.github/workflows/Build.yml
+
 name: Build and Release uYouPlus
 
 on:
